correct z-index of footer block

--- a/scss/_tc-style.scss
+++ b/scss/_tc-style.scss
@@ -577,7 +577,7 @@ $m--tileImgH: 300px;
 
 .footer {
   position: relative;
-  z-index: 3;
+  z-index: 2;
   background: $navy0;
 }
 
